{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 35,
  "lineage": "8557c7ad-fb20-01d8-d5b0-021f6eea85b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042208:security-group/sg-0f7487f5f9c8e6e95",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7487f5f9c8e6e95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0cbccd5a9b8ddae92"
                ],
                "self": true,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cbccd5a9b8ddae92"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0cbccd5a9b8ddae92"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-f8bd5e91"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "terraform-20240802094118862100000001",
            "name_prefix": "terraform-",
            "owner_id": "975050042208",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d56cf1543ad20663"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050042208:security-group/sg-0cbccd5a9b8ddae92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbccd5a9b8ddae92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0f7487f5f9c8e6e95"
                ],
                "self": true,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f7487f5f9c8e6e95"
                ],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0f7487f5f9c8e6e95"
                ],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240802094118867500000002",
            "name_prefix": "terraform-",
            "owner_id": "975050042208",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d56cf1543ad20663"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}